<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>pixels-trino</artifactId>
        <groupId>io.pixelsdb</groupId>
        <version>0.2.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>pixels-trino-connector</artifactId>
    <description>Trino - Pixels Connector</description>
    <packaging>trino-plugin</packaging>

    <properties>
        <maven.compiler.source>23</maven.compiler.source>
        <maven.compiler.target>23</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-common</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-cache</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-core</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-storage-localfs</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-storage-hdfs</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-storage-s3</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-storage-redis</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-planner</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-executor</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-invoker-spike</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-invoker-lambda</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-invoker-vhive</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.pixelsdb</groupId>
            <artifactId>pixels-scaling-ec2</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- trino -->
        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-spi</artifactId>
            <scope>provided</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-plugin-toolkit</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- protobuf -->
        <dependency>
            <groupId>com.google.protobuf</groupId>
            <artifactId>protobuf-java</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- grpc -->
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-netty-shaded</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-protobuf</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.grpc</groupId>
            <artifactId>grpc-stub</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>io.etcd</groupId>
            <artifactId>jetcd-core</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>io.airlift</groupId>
            <artifactId>bootstrap</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.airlift</groupId>
            <artifactId>configuration</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.airlift</groupId>
            <artifactId>json</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>io.airlift</groupId>
            <artifactId>slice</artifactId>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_annotations</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>

        <!-- io.opentelemetry dependencies must be provided, although they are not used -->
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-context</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.google.inject</groupId>
            <artifactId>guice</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.openjdk.jol</groupId>
            <artifactId>jol-core</artifactId>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>

        <!-- test -->
        <dependency>
            <groupId>io.trino</groupId>
            <artifactId>trino-testing</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>